--- a/src/index.scss
+++ b/src/index.scss
@@ -33,8 +33,15 @@ body {
 			color: #fff;
 			margin-top: 20px;
 			cursor: pointer;
-		}
 
+			&:hover {
+				transform: translateY(-3px);
+				background-color: rgb(34, 207, 242);
+				color: #fff;
+				box-shadow: 0 4px 0 darken(rgb(34, 207, 242), 10%);
+				border: 1px solid darken(rgb(34, 207, 242), 15%);
+			}
+		}
 		h2 {
 			margin-bottom: 0;
 		}
@@ -108,6 +115,7 @@ body {
 
 			&:hover {
 				border: 2px solid rgba(0, 0, 0, 0.3);
+				transform: translateY(-2px);
 			}
 		}
 	}
